Add jfr_gc_stats tool and dockerize the dogfood sample flow
- New JfrGcStatsTool reports collector config, pause distribution
    (p50/p95/p99/max), pause overhead, heap occupancy, and anomalies
    (full GCs, long pauses, System.gc, humongous allocations).
    Registered in jfrdoc.java's TOOLS list so the agent picks it up.
  - JfrSummaryTool now exposes notableEventsPresent (gc / executionSamples /
    allocations / locks / io / exceptions) and derived rates (samples/sec,
    exceptions/sec) so the prompt can gate jfr_gc_stats and surface
    high-exception-rate findings as measured rather than unanalyzed.
  - analyze.md gains the Memory & GC section, gates jfr_gc_stats on
    notableEventsPresent.gc, and adds explicit low-sampling-density /
    high-exception-rate caveats.
  - Replace samples/gen-petclinic-sample.sh with docker-compose.yml +
    docker/petclinic/Dockerfile. Build and run both happen inside
    eclipse-temurin:25-jdk under 1 CPU / 2Gi limits, so the recording
    matches the --container-cpu / --container-memory the report claims —
    and host JDK, Maven, and TLS-MITM workarounds disappear.
  - jfrdoc shell script drops file.encoding=UTF-8 and JFRDOC_JAVA_OPTS
    now that the dockerized flow no longer needs the truststore escape hatch.
  - Refresh petclinic dogfood artifacts (report + summary + top-methods +
    new gc-stats JSON) against a recording produced by the new flow.